--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-DATABASE_URL=postgresql://postgres.efqsebedgisyewalnuws:Deve!o3r$21@aws-0-ap-south-1.pooler.supabase.com:6543/postgres
+DATABASE_URL=postgresql://postgres.efqsebedgisyewalnuws:Deve!0p3R21@aws-0-ap-south-1.pooler.supabase.com:5432/postgres
 JWT_SECRET_KEY=ecommercestationary
