--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,17 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "google-auth-library": "^10.2.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
-    "prisma": "^6.13.0"
+    "postgres": "^3.4.7",
+    "prisma": "^6.13.0",
+    "validator": "^13.15.15"
   }
 }
