--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,5 @@ DATABASE_URL=postgresql://postgres.efqsebedgisyewalnuws:Deve!0p3R21@aws-0-ap-sou
 JWT_SECRET_KEY=ecommercestationary
 GOOGLE_CLIENT_ID=1044867841701-ecpgglegf66che09hah3i3j6evu3p1k7.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=http://localhost:5000/google/callback
-FRONTEND_URL=http://localhost:5000
+GOOGLE_REDIRECT_URI=http://localhost:5000/api/auth/oauth2/google/callback
+FRONTEND_URL=http://localhost:3000
