reset with email

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,8 @@ GOOGLE_CLIENT_ID=1044867841701-ecpgglegf66che09hah3i3j6evu3p1k7.apps.googleuserc
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=http://localhost:5000/api/auth/oauth2/google/callback
 FRONTEND_URL=http://localhost:3000
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=developerproducts0@gmail.com
+EMAIL_PASSWORD=Developer1234password
+EMAIL_FROM=developerproducts0@gmail.com
