--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "google-auth-library": "^10.2.1",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
