error during s3 images

--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,7 @@ EMAIL_PORT=587
 EMAIL_USER=developerproducts0@gmail.com
 EMAIL_PASSWORD=xdmaivpxkpttippz
 EMAIL_FROM=developerproducts0@gmail.com
+S3_BUCKET_NAME=e-commerce091
+AWS_S3_ACCESS_KEY=AKIARPU63EM2QIVXZ63Q
+AWS_S3_SECRET_ACCESS_KEY=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
+AWS_S3_REGION=ap-south-1
