--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "multer-s3": "^3.0.1",
     "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
+    "node-geocoder": "^4.4.1",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
